--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # For projects using Nanoc (http://nanoc.ws/)
-
+node_modules
 # Default location for output (needs to match output_dir's value found in nanoc.yaml)
 output/
 
