--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
-    "openai": "^4.71.1",
+    "openai": "^4.72.0",
     "typescript": "^5.6.3"
   }
 }
