--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.1.7",
     "openai": "^4.72.0",
+    "react-syntax-highlighter": "^15.6.1",
     "typescript": "^5.6.3"
   }
 }
